fix: add responsive menu text wrap (#39)

--- a/assets/sass/menuPage.scss
+++ b/assets/sass/menuPage.scss
@@ -127,6 +127,8 @@
 
     > div > div > div:last-child:has(img) > div > span {
       text-wrap: wrap;
+      white-space: normal;
+      word-break: break-word;
       text-align: center;
     }
 
